--- a/fsyy-grpc-demo/pom.xml
+++ b/fsyy-grpc-demo/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>demo</name>
+    <name>fsyy-grpc-demo</name>
     <url>http://maven.apache.org</url>
 
     <properties>
