--- a/fsyy-web-demo/pom.xml
+++ b/fsyy-web-demo/pom.xml
@@ -21,6 +21,7 @@
         <commons.io.version>2.4</commons.io.version>
         <!--<jackson.version>2.9.4</jackson.version>-->
         <druid.version>1.2.3</druid.version>
+        <mybatis.version>2.1.1</mybatis.version>
     </properties>
 
     <dependencies>
@@ -98,6 +99,17 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis.version}</version>
         </dependency>
     </dependencies>
 
