--- a/fsyy-web-demo/pom.xml
+++ b/fsyy-web-demo/pom.xml
@@ -22,6 +22,7 @@
         <!--<jackson.version>2.9.4</jackson.version>-->
         <druid.version>1.2.3</druid.version>
         <mybatis.version>2.1.1</mybatis.version>
+        <netty.version>4.1.6.Final</netty.version>
     </properties>
 
     <dependencies>
@@ -121,6 +122,17 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty.version}</version>
         </dependency>
     </dependencies>
 
